# sergioribera.github.io

./: .dockerignore  .env.dev  .gitignore  .htaccess  CNAME  Cargo.toml  Dockerfile.lambda  Dockerfile.service  Dockerfile.web  Makefile.toml  README.md  git-pull.php  index.html  proyects.html  release.toml  render.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
404 LinuxStyle/css/: style.css
404 LinuxStyle/js/: data-text.js
ClothSelect/: index.html
ClothSelect/css/: main.css
ClothSelect/js/: main.js
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
css/: styles.css
js/: data.js  scripts.js  scripts.min.js
lambda_service/: Cargo.toml  Makefile.toml
lambda_service/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
projects/: index.html
res-home/css/: carousel.css  contact.css  style.css
res-home/js/: main.js  particlesjs-config.json
service/: Cargo.toml  Makefile.toml
web/: Cargo.toml  Makefile.toml  index.html  see.conf
web/src/: app.rs
