[package]
name = "lambda_service"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[profile.release]
opt-level = "z"
lto = true

[[bin]]
name = "bootstrap"
path = "./src/main.rs"

[dependencies]
lambda_http = { version = "0.8.0", default-features = false, features = [
    "apigw_rest",
] }
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }

models = { path = "../models" }

litcrypt = "0.3.0"
dynomite = "0.10.0"
routerify = "3.0.0"
