[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
models = { path = "../models" }

js-sys = "0.3.61"
wasm-bindgen = "^0.2"

yew = "0.20.0"
yew-router = "0.17.0"
yew-hooks = "0.2.0"
once_cell = "1.17.1"
obfstr = "0.4.3"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'Window',
]
