[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
models = { path = "../models" }
obfstr.workspace = true
once_cell.workspace = true

js-sys = "0.3.61"
wasm-bindgen = "^0.2"

yew = "0.20.0"
yew-router = "0.17.0"
yew-hooks = "0.2.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'Window',
]
